--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,7 @@
 {
   "current": {
-    "logo_width": 90,
+    "logo": "shopify:\/\/shop_images\/Vector_21.png",
+    "logo_width": 300,
     "type_header_font": "prompt_n4",
     "heading_scale": 100,
     "type_body_font": "poppins_n4",
