--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -212,6 +212,17 @@
           "secondary_button_label": "#121212",
           "shadow": "#121212"
         }
+      },
+      "scheme-8972053b-c618-4b2f-ad1a-1bee390a7262": {
+        "settings": {
+          "background": "#486171",
+          "background_gradient": "",
+          "text": "#e0e0d6",
+          "button": "#121212",
+          "button_label": "#e0e0d6",
+          "secondary_button_label": "#121212",
+          "shadow": "#121212"
+        }
       }
     }
   },
